--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,85 @@
 @charset "utf-8";
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-ul, li{
-    list-style: none;
+ul,
+li {
+  list-style: none;
 }
-a{
-    text-decoration: none;
-    color: #333;
+a {
+  text-decoration: none;
+  color: #333;
+}
+/* nav */
+nav {
+  background-color: aliceblue;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+}
+nav > a:hover {
+  text-decoration: underline;
+}
+.navIcon {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.navIcon-a {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  opacity: 0.6;
+  transition: all 0.5s;
+}
+.navIcon-a:hover {
+  opacity: 1;
+}
+.navIcon-a::after {
+  position: absolute;
+  content: "";
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.2);
+  display: block;
+  top: -5px;
+  left: -5.5px;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.navIcon-a:hover::after {
+  opacity: 1;
+}
+.navIcon-a::before {
+  content: attr(aria-label);
+  position: absolute;
+  top: 36px;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  font-size: 12px;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.navIcon-a:hover::before {
+  opacity: 1;
+}
+#login {
+  background-color: #4484f3;
+  padding: 4px 12px;
+  border: none;
+  border-radius: 3px;
+  color: #fff;
+}
+#login:hover {
+  background-color: #2d67cc;
+  cursor: pointer;
 }
