--- a/css/main.css
+++ b/css/main.css
@@ -67,10 +67,12 @@ nav > a:hover {
   background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
   opacity: 0;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
+  visibility: hidden;
 }
 .navIcon-a:hover::before {
   opacity: 1;
+  visibility: visible;
 }
 #login {
   background-color: #4484f3;
