검색창 작업중

--- a/css/main.css
+++ b/css/main.css
@@ -85,3 +85,36 @@ nav > a:hover {
   background-color: #2d67cc;
   cursor: pointer;
 }
+/* 메인 */
+.search_bar {
+  /* background-color: #2d67cc; */
+  max-width: 746px;
+  min-width: 337px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 25px;
+  border-radius: 100px;
+  border: 1px solid #ccc;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
+}
+.search_bar i{
+  opacity: 0.5;
+}
+.search_bar input {
+  width: 70%;
+  padding: 7px;
+  border: none;
+  outline: none;
+}
+.s_icon {
+  width: 10%;
+  display: flex;
+  gap: 10px;
+}
+.s_icon a {
+  width: calc(100% / 2);
+}
+.s_icon a img {
+  width: 100%;
+}
