--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ a {
 }
 /* nav */
 nav {
-  background-color: aliceblue;
+  /* background-color: aliceblue; */
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -86,8 +86,25 @@ nav > a:hover {
   cursor: pointer;
 }
 /* 메인 */
+.main_wrap {
+  /* background-color: aliceblue; */
+  width: 70%;
+  max-width: 1280px;
+  min-width: 390px;
+  margin: 100px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+}
+.g_logo {
+  width: 50%;
+  max-width: 250px;
+  min-width: 180px;
+}
 .search_bar {
-  /* background-color: #2d67cc; */
+  background-color: #fff;
+  width: 100%;
   max-width: 746px;
   min-width: 337px;
   display: flex;
@@ -98,7 +115,7 @@ nav > a:hover {
   border: 1px solid #ccc;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
 }
-.search_bar i{
+.search_bar i {
   opacity: 0.5;
 }
 .search_bar input {
@@ -117,4 +134,91 @@ nav > a:hover {
 }
 .s_icon a img {
   width: 100%;
+}
+/* 버튼 리스트 */
+.site_list {
+  width: 60%;
+  max-width: 600px;
+  min-width: 200px;
+}
+.site_list ul {
+  display: flex;
+}
+.site_list ul li {
+  width: calc(100% / 5);
+  position: relative;
+}
+.site_list ul li a {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+  align-items: center;
+}
+.btn_bg {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.btn_bg > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30px;
+}
+.site_list ul li a span {
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 90px;
+}
+/* hover했을때 나오는 배경 */
+.hover_bg {
+  width: 100%;
+  height: 110px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.2);
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.hover_bg > img {
+  position: absolute;
+  top: 10px;
+  right: 3px;
+  opacity: 0;
+}
+/* hover */
+.site_list ul li:hover .hover_bg {
+  opacity: 1;
+}
+.site_list ul li:hover .hover_bg > img {
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+  transition-duration: 0.3s;
+}
+/* 검색 버튼 */
+.s_btn {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.s_btn button {
+  border: none;
+  padding: 3px 15px;
+  background-color: #f4f4f4;
+}
+.s_btn button:hover {
+  color: #333;
+  background: linear-gradient(to bottom, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
